infrastructure/03-traefik/overlay-internal/traefik-ingress-dashboard-local.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    local: "true"
  name: traefik-dashboard-local
  namespace: traefik
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`tr-local.steffenillium.de`)
    services:
    - kind: TraefikService
      name: api@internal
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    local: "true"
  name: traefik-dashboard-front
  namespace: traefik
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`tr-front.steffenillium.de`)
    services:
    - name: front-traefik
      port: 9000
